YLI-126: Implemented requested fixes.

--- a/openy_lily/templates/field/field--paragraph--gallery-cta.html.twig
+++ b/openy_lily/templates/field/field--paragraph--gallery-cta.html.twig
@@ -53,11 +53,11 @@
   </div>
   <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
+    <span class="sr-only">{{ 'Previous'|t }}</span>
   </a>
   <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
+    <span class="sr-only">{{ 'Next'|t }}</span>
   </a>
 </div>
 
