YLI-158: Styling of search box and reveal effect.

--- a/openy_lily/css/style.css
+++ b/openy_lily/css/style.css
@@ -47,6 +47,11 @@ body.tiny-header {
 }
 
 header {
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -ms-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
   position: fixed;
   top: 0;
   width: 100%;
@@ -126,6 +131,9 @@ header.tiny .top-navs #block-openy-lily-user-menu li a {
 }
 header.tiny .top-navs #block-openy-lily-main-menu li a {
   padding: 16px 25px;
+}
+header.expanded-search {
+  top: 88px;
 }
 
 .social-disclaimer .contextual-region .contextual .contextual-links li {
@@ -454,6 +462,64 @@ body.path-search #block-mainpagecontent li {
 
 .path-search-results #block-tabs {
   display: none;
+}
+
+#search-box {
+  position: fixed;
+  top: 0;
+  background: #dbdbdb;
+  padding: 20px 100px;
+}
+#search-box input {
+  padding: 12px 20px;
+  height: 48px;
+  border-radius: 3px;
+  font-size: 18px;
+  border: 1px solid #ccc;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+#search-box button {
+  padding: 11px 20px;
+  outline: 0;
+  font-size: 18px;
+  border: 0;
+  border-radius: 3px;
+  background-color: #9c1f7b;
+  background-image: -webkit-linear-gradient(#b92f9e, rgba(171, 36, 144, 0));
+  background-image: -moz-linear-gradient(#b92f9e, rgba(171, 36, 144, 0));
+  background-image: -ms-linear-gradient(#b92f9e, rgba(171, 36, 144, 0));
+  background-image: linear-gradient(#b92f9e, rgba(171, 36, 144, 0));
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
+  text-transform: uppercase;
+  font-weight: bold;
+  font-family: 'Cachet',Helvetica,Arial,sans-serif;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.search-toggle {
+  margin: 0 0 0 5px;
+  float: right;
+  cursor: pointer;
+  line-height: 81px;
+  padding: 0 10px;
+  color: #777777;
+  border-top: 2px solid transparent;
+  font-size: 14px;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -ms-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+.search-toggle:hover {
+  border-top: 2px solid #aa228d;
+  background-color: #fff;
+  color: black;
+}
+.tiny-header .search-toggle {
+  line-height: 50px;
 }
 
 .node--type-blog.node--view-mode-teaser a .inner-wrapper {
