--- a/openy_lily/sass/misc/_search.scss
+++ b/openy_lily/sass/misc/_search.scss
@@ -28,9 +28,11 @@ body.path-search {
   position: fixed;
   top: 0;
   background: $grey24;
-  padding: 20px 100px;
-  @include transition(opacity 0.1s linear);
-  opacity: 0;
+  padding: 0 100px;
+  z-index: 100;
+  max-height: 0;
+  height: auto;
+  @include transition(all 0.2s linear);
   input {
     padding: 12px 20px;
     height: 48px;
@@ -60,7 +62,8 @@ body.path-search {
     border-bottom-left-radius: 0;
   }
   &.expanded-search {
-    opacity: 1;
+    max-height: 88px;
+    padding: 20px 100px;
   }
 }
 
