--- a/events.scss
+++ b/events.scss
@@ -11,23 +11,79 @@
       margin: 0 15px 50px;
     }
 
+    .form-item {
+      margin-bottom: 0;
+    }
+
     .form-item-field-event-date-range, .form-item-field-event-date-range-1 {
       float: left;
       padding-right: 35px;
-      width: 160px;
+      input {
+        padding: 4px;
+        @include breakpoint(tablet) {
+          max-width: 160px;
+        }
+      }
+
+      label {
+        @include cachet();
+        font-size: 14px;
+        line-height: 1.57;
+        color: $dark-grey;
+        margin-bottom: 3px;
+        display: block;
+      }
+
+      margin-bottom: 20px;
+      width: 100%;
+      @include breakpoint(tablet) {
+        float: left;
+        padding-right: 35px;
+        width: 50%;
+      }
+      @include breakpoint(laptop) {
+        margin-bottom: 0;
+        width: auto;
+      }
+      &.form-item-field-belongs-to {
+        margin-bottom: 0;
+      }
+
     }
 
     .form-item-search-api-fulltext {
-      position: absolute;
-      float: none;
-      right: 125px;
-      top: 37px;
+      padding-right: 0;
+      float: left;
+      clear: both;
+      @include breakpoint(laptop) {
+        position: absolute;
+        float: none;
+        right: 125px;
+        top: 37px;
+      }
+      input {
+        height: 40px;
+        @include breakpoint(tablet) {
+          max-width: 250px;
+        }
+      }
     }
 
     .form-actions {
-      position: absolute;
-      right: 35px;
-      top: 37px;
+      text-align: center;
+      @include breakpoint(laptop) {
+        position: absolute;
+        right: 35px;
+        top: 37px;
+      }
+      input {
+        @include btn-blue();
+        width: 90px;
+        margin-top: 10px;
+        @include breakpoint(tablet) {
+          margin: 0;
+        }
+      }
     }
   }
 
