--- a/paragraphs/columns.scss
+++ b/paragraphs/columns.scss
@@ -107,6 +107,11 @@
   }
 }
 
+.field-sb-body {
+  a {
+    display: initial;
+  }
+}
 article .node--view-mode-flexible-content {
   h2 {
     margin-top: 20px;
