--- a/structs/content.scss
+++ b/structs/content.scss
@@ -47,6 +47,13 @@ body {
       text-align: right;
     }
   }
+
+  .field-sb-body {
+    a {
+      display: initial;
+    }
+  }
+
 }
 
 .node__content .node--view-mode-flexible-content h2 a {
