--- a/openy_lily/templates/include/sidebar-search-and-menu.html.twig
+++ b/openy_lily/templates/include/sidebar-search-and-menu.html.twig
@@ -6,10 +6,10 @@
 #}
 
 <div id="search-box" class="hidden-xs">
-  <form method="get" action="{{ search_view_content_path }}">
+  <form method="get" action="/search">
     <div class="form-group col-xs-12">
       <div class="input-group">
-        <input type="text" name="q" class="form-control">
+        <input type="text" name="search" class="form-control">
         <span class="input-group-btn">
           <button class="btn btn-info" type="submit">{{ "SEARCH THE Y"|t }}</button>
         </span>
