--- a/openy_lily/sass/misc/_header.scss
+++ b/openy_lily/sass/misc/_header.scss
@@ -43,6 +43,7 @@ header {
         }
       }
     }
+    #block-anonymoususersmenu,
     #block-openy-lily-user-menu {
       li {
         a {
@@ -60,7 +61,6 @@ header {
       }
     }
   }
-
   #block-openy-lily-branding {
     a {
       img {
