--- a/openy_lily/sass/misc/_header.scss
+++ b/openy_lily/sass/misc/_header.scss
@@ -84,6 +84,7 @@ header {
           }
         }
       }
+      #block-anonymoususersmenu,
       #block-openy-lily-user-menu {
         li {
           a {
