--- a/openy_lily/templates/include/sidebar-search-and-menu.html.twig
+++ b/openy_lily/templates/include/sidebar-search-and-menu.html.twig
@@ -6,7 +6,7 @@
 #}
 
 <div id="search-box" class="hidden-xs">
-  <form method="get" action="{{ base }}/search">
+  <form method="get" action="{{ url('<front>') }}/search">
     <div class="form-group col-xs-12">
       <div class="input-group">
         <input type="text" name="search" class="form-control">
@@ -17,3 +17,4 @@
     </div>
   </form>
 </div>
+
