--- a/openy_lily/sass/misc/_search.scss
+++ b/openy_lily/sass/misc/_search.scss
@@ -31,6 +31,7 @@ body.path-search {
   padding: 0 100px;
   z-index: 100;
   max-height: 0;
+  width: 100%;
   height: auto;
   @include transition(all 0.2s linear);
   input {
